fix: subjects cropped in the subject detail menu

--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     padding: 0;
     margin: 0 0;
     height: 100%;
